Debugando a parte de testes para poder rodar um container separado para os testes